# music-mood-recognition

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/mmr_model/: checkpoint  dataset.py  mir-model4.index  music_cnn_train.py  predict_mir.py  utility_functions.py
