[tool.poetry]
name = "music-mood-recognition"
version = "0.1.0"
description = "Machine learning model for classifying music mood"
authors = ["Sinead O'Doherty <sinead_k_doherty@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "2.1.2"
librosa = "0.5.1"
pydub = "0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
